--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 # Node artifact files
 node_modules/
 dist/
+1/
+2/
+3/
+config.json
+nohup.out
 
 # Compiled Java class files
 *.class
@@ -47,4 +52,3 @@ Thumbs.db
 *.flv
 *.mov
 *.wmv
-
