--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "type": "module",
   "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "readline": "^1.3.0",
