--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "webtally-node",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "description": "The server application for for Sam Chilton's WebTally system",
   "main": "server.js",
   "type": "module",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10",
-    "ws": "^8.3.0"
+    "ws": "^8.10.0",
+    "xeue-logs": "^1.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
