--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
-    "readline": "^1.3.0",
-    "readline-sync": "^1.4.10",
     "ws": "^8.10.0",
-    "xeue-logs": "^1.1.6"
+    "xeue-config": "^1.3.2",
+    "xeue-logs": "^1.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "Sam Chilton",
-  "license": "AGPL-3.0-or-later"
+  "license": "AGPL-3.0-or-later",
+  "devDependencies": {
+    "eslint": "^8.27.0"
+  }
 }
